# kommo-sdk-data-engineer

./: .gitignore  README.md  _README.md  pyproject.toml  requirements.txt
kommo_sdk_data_engineer/: __init__.py  config.py  kommo.py  utils.py
kommo_sdk_data_engineer/endpoints/: companies.py  contacts.py  custom_fields.py  events.py  leads.py  pipelines.py  users.py
kommo_sdk_data_engineer/models/: company_models.py  contact_models.py  custom_field_models.py  event_models.py  lead_models.py  pipeline_models.py  user_models.py
