[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kommo_sdk_data_engineer"
version = "0.1.0"

authors = [
  { name="Mailson Náscin", email="mailson.nascin@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
keywords = ["kommo", "data engineer"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Internationalization",
]
dependencies = [
  "pandas==2.2.3",
  "requests==2.32.3",
  "pydantic==2.10.6",
  "SQLAlchemy==2.0.37"
]

[project.urls]
"Homepage" = "https://github.com/nascin/kommo-sdk-data-engineer"
"Source Code" = "https://github.com/nascin/kommo-sdk-data-engineer"
"Bug Tracker" = "https://github.com/nascin/kommo-sdk-data-engineer/issues"
